Fixed result box alignment for counts between 4 and 6
Pretty colours

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,6 +3,7 @@
     height: calc(100vh - 98px);
     display: flex;
     flex-direction: row;
+    align-content: flex-start;
     justify-content: flex-start;
     flex-wrap: wrap;
     overflow-x: hidden;
