--- a/src/app/selection-tree/selection-tree.component.scss
+++ b/src/app/selection-tree/selection-tree.component.scss
@@ -1,3 +1,3 @@
 .selected {
-    background-color: red;
+    background-color: var(--mdc-filled-button-container-color, transparent);
 }
